Prevent the chart bumps on weekends from running QA
* Running QA during chart bumps serves no purpose
* Let's remove it as currently, if QA fails, MR's do not open because
  the stage configuration puts QA in front of the stage that opens MR's
* After this is merged, only the `check` and `scheduled` stages should
  exist and MR's will always open
* Since the code change inside of the scheduled pipeline doesn't apply
  changes to our clusters, those no need for QA to run at all, this is a
  waste of time and resources

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1559,6 +1559,8 @@ gstg:qa:
       when: never
     - if: $EXPEDITE_DEPLOYMENT
       when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
     - changes:
         - vendor/charts/gitlab/gstg/**/*
         - vendor/charts/gitlab-runner/gstg/**/*
@@ -1822,6 +1824,8 @@ pre:qa:
     - if: $AUTO_DEPLOY == "true"
       when: never
     - if: $EXPEDITE_DEPLOYMENT
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
     - changes:
         - vendor/charts/gitlab/pre/**/*
