--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -112,6 +112,8 @@ environments:
           webservice:
             enabled: true
         gitlab_chef_source_name: "gstg"
+        gitlab_external_secrets:
+          namespace: "gitlab-cny"
         gitlab_extras:
           api_no_proxy: true
           ingress_readiness: true
@@ -186,6 +188,8 @@ environments:
           kas:
             enabled: false
         gitlab_chef_source_name: "gprd"
+        gitlab_external_secrets:
+          namespace: "gitlab-cny"
         gitlab_extras:
           api_no_proxy: true
           ingress_readiness: true
